--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "browser-sync": "^3.0.3",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^4.0.6"
+  },
+  "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2"
   }
 }
